Fix deprecated-for-removal boxed-primitive constructor warnings
Replace new Integer/Boolean/Double/Long(...) with the equivalent .valueOf(...)
across 39 source files - these constructors are forRemoval=true since Java 9,
so javac prints the warning unconditionally regardless of -Xlint settings.
Mechanical, behavior-preserving substitution (checked for == identity
comparisons against the old constructor results first; found none).

Two related special cases fixed by hand:
- VerticalLabelUI.createUI(): dropped a dead SecurityManager-gated branch
  (SecurityManager is inert since JDK 17, per JEP 411) and its now-unused
  SAFE_VERTICAL_LABEL_UI field.
- DBFField.setFieldName(): added the missing @Deprecated annotation the
  existing @deprecated Javadoc tag should have had.